Bug 171115 - [cmake] WTF target should not have wtf and subdirectries in public interface
Summary: [cmake] WTF target should not have wtf and subdirectries in public interface
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Konstantin Tokarev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-21 09:09 PDT by Konstantin Tokarev
Modified: 2017-04-21 10:26 PDT (History)
2 users (show)

See Also:


Attachments
Patch (5.84 KB, patch)
2017-04-21 09:11 PDT, Konstantin Tokarev
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Konstantin Tokarev 2017-04-21 09:09:54 PDT
In r209665 WEBCORE_FRAMEWORK macro started to export INCLUDE_DIRECTORIES of targets as their public interface, so that linked targets can use them implicitly without copying directory lists around. This matches existing practice for all targets except WTF, headers from which are always included with full path starting from "<wtf/...".

Since r209665 it became possible to include headers from wtf or its subdirectories in CMake builds without using "<wtf/..." path. It should not be allowed.
Comment 1 Konstantin Tokarev 2017-04-21 09:11:43 PDT
Created attachment 307735 [details]
Patch
Comment 2 Konstantin Tokarev 2017-04-21 10:26:09 PDT
Comment on attachment 307735 [details]
Patch

Clearing flags on attachment: 307735

Committed r215614: <http://trac.webkit.org/changeset/215614>
Comment 3 Konstantin Tokarev 2017-04-21 10:26:14 PDT
All reviewed patches have been landed.  Closing bug.